<resources>
    <string name="app_name">ChatUi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">首页</string>
    <string name="menu_message">聊天</string>
    <string name="menu_map">地图</string>
    <string name="menu_photo">相册</string>
    <string name="menu_video">视频</string>

    <string name="text_btn1">子按钮1</string>
    <string name="text_btn2">子按钮2</string>
    <string name="text_btn3">子按钮3</string>
    <string name="text_btn4">子按钮4</string>
    <string name="text_btn5">子按钮5</string>
</resources>