<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--ic_menu_camera-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <!--ic_menu_message-->
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/menu_message" />

        <!--ic_menu_gallery-->
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />

        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_photo"
            android:title="@string/menu_photo" />
        <!--ic_menu_slideshow-->
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video"
            android:title="@string/menu_video" />
    </group>
</menu>