<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gy.wyy.chat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.gy.wyy.chat.ui.message.MessageFragment"
        android:label="@string/menu_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.gy.wyy.chat.ui.map.mapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_photo"
        android:name="com.gy.wyy.chat.ui.photo.PhotoFragment"
        android:label="@string/menu_photo"
        tools:layout="@layout/fragment_photo" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.gy.wyy.chat.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />
</navigation>