<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:menu="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"/>
    <com.gy.wyy.chat.ui.home.view.SatelliteMenu
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:id="@+id/satelliteMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        menu:radius="100dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg" >

            <ImageView
                android:id="@+id/id_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/button_in" />

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img5"
            android:tag="@string/text_btn1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img4"
            android:tag="@string/text_btn2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img3"
            android:tag="@string/text_btn3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img2"
            android:tag="@string/text_btn4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img1"
            android:tag="@string/text_btn5" />
    </com.gy.wyy.chat.ui.home.view.SatelliteMenu>

</RelativeLayout>